[gd_scene load_steps=20 format=2]

[ext_resource path="res://ufo.png" type="Texture" id=1]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://MainScene.tres" type="Environment" id=3]
[ext_resource path="res://ColorRect.gd" type="Script" id=4]
[ext_resource path="res://Color2.gd" type="Script" id=5]
[ext_resource path="res://SpawnTriangle.gd" type="Script" id=6]
[ext_resource path="res://space.png" type="Texture" id=7]
[ext_resource path="res://ufo2.png" type="Texture" id=8]
[ext_resource path="res://ufo3.png" type="Texture" id=9]
[ext_resource path="res://ufo5.png" type="Texture" id=10]
[ext_resource path="res://ufo4.png" type="Texture" id=11]
[ext_resource path="res://ufo6.png" type="Texture" id=12]
[ext_resource path="res://ufo7.png" type="Texture" id=13]
[ext_resource path="res://ufo8.png" type="Texture" id=14]
[ext_resource path="res://ufo9.png" type="Texture" id=15]
[ext_resource path="res://ufo10.png" type="Texture" id=16]
[ext_resource path="res://Reset walls.tscn" type="PackedScene" id=17]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "fall",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="Color2" type="StaticBody2D" parent="."]
script = ExtResource( 5 )

[node name="ColorRect3" type="ColorRect" parent="Color2"]
margin_left = -1928.0
margin_top = 1001.0
margin_right = 3518.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Color2"]
polygon = PoolVector2Array( -26.2466, 1001.26, 1995.19, 1001.38, 2047.87, 1159.25, -83.9186, 1164.29, -73.8393, 1003.02 )

[node name="Color" type="StaticBody2D" parent="."]
script = ExtResource( 4 )

[node name="ColorRect2" type="ColorRect" parent="Color"]
margin_left = -2228.0
margin_right = 3229.0
margin_bottom = 79.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Color"]
polygon = PoolVector2Array( -54.757, 78.7611, 2012.59, 78.2337, 2010.07, -35.1592, -393.859, -45.2386, -411.498, 75.7138 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 3 )

[node name="ResetWalls" parent="." instance=ExtResource( 17 )]
position = Vector2( -224.253, 357.737 )
scale = Vector2( 0.8, 0.8 )
z_index = 1
collision_layer = 2

[node name="Area2D" parent="ResetWalls" index="0"]
script = null

[node name="Player" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
material = SubResource( 1 )
scale = Vector2( 0.08, 0.08 )
frames = SubResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player"]
polygon = PoolVector2Array( 54.5418, 5.66463, 56.4317, -15.1241, 39.1078, -30.5581, 30.2883, -47.2521, 18.3191, -58.9063, 13.5944, -63.631, -12.864, -64.261, -30.8179, -44.7322, -54.4414, -14.4941, -54.7563, 6.29459, -14.4389, 36.8477, 13.2794, 38.4226 )

[node name="CameraTrackingObject" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="CameraTrackingObject"]
position = Vector2( 960, 540 )
current = true
smoothing_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5
autostart = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 5.084
autostart = true

[node name="CanvasModulate" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasModulate"]
motion_scale = Vector2( 3, 1 )
motion_mirroring = Vector2( 1920, 0 )

[node name="space" type="Sprite" parent="CanvasModulate/ParallaxLayer"]
position = Vector2( 976.284, 530.205 )
scale = Vector2( 10, 10 )
texture = ExtResource( 7 )

[node name="Timer2" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer3" to="ResetWalls" method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[editable path="ResetWalls"]
